--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="header-text">
                 
                 <h1>Hi! I am <br>Md <span> Nayeem </span>Sadman<br> from Bangladesh</h1>
-                <img src="images/profile.photo.jpg" class="profile-img">
+                <img src="profile.photo.jpg" class="profile-img">
            
         </div>
     </div>
@@ -361,4 +361,5 @@ Outside the laboratory and lecture hall, I am a passionate advocate for communit
 </body>
 
 </html>
+
 
