--- a/more-work.html
+++ b/more-work.html
@@ -28,7 +28,7 @@
         <h2>PCR Amplification Study</h2>
         <div class="work-list">
             <div class="work">
-                <img src="images/pcr2.jpeg" alt="PCR Step 1">
+                <img src="pcr2.jpeg" alt="PCR Step 1">
                 <div class="layer">
                     <h3>Sample Preparation</h3>
                     <p>Collected and purified DNA samples.<br>Ensured quality and concentration before amplification.</p>
@@ -119,4 +119,5 @@
 </script>
 </body>
 </html>
+
 
