--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Outside the laboratory and lecture hall, I am a passionate advocate for communit
                
             </div>
             <div class="copyright">
-                <p>Copyright @ Made With <i class="fa-solid fa-heart"></i> By Sanjida Nahar</p>
+                <p>Copyright @ Presented With <i class="fa-solid fa-heart"></i> By Md Nayeem Sadman</p>
             </div>
         </div>
         <script>
@@ -361,5 +361,6 @@ Outside the laboratory and lecture hall, I am a passionate advocate for communit
 </body>
 
 </html>
+
 
 
